--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DISCORD_BOT_TOKEN=MTI1OTg0NTEwMDc5Njc3MjQ2NA.G7vdNm.vMKSFnySOgCjUKxqn3s-9SzYhnwZWKacdQ2Vrs
+DISCORD_BOT_TOKEN=MTI1OTg0NTEwMDc5Njc3MjQ2NA.GZZSYz.2PjUWENwHVCFFYiIRe7R3MvZGpKrIrXy_LHMZE
 DISCORD_CHANNEL_ID=1259847049243787364
 GOOGLE_API_KEY=AIzaSyDgYVcCYorZ03n16-6Xl5mTcKihK64IatM
